模型/Q2/v1/建模思路.md
# Q2 建模思路

owner_name: 罗懿
owner_code: L
owner_role: 建模手
version: v1
status: draft
based_on: 模型/Q1/v1/数学模型.md；题目简报.md；题目信息/A题/附件3.xlsx/Sheet1!A3:H3；题目信息/A题/附件4.xlsx/Sheet1!A1:B14

## 题目分析

问题二是在 Q1 垂荡动力学基础上的参数反演与连续优化。阻尼过小时相对速度大但单位阻尼耗能低，阻尼过大时浮子与振子趋于同步、相对速度下降，因此平均功率关于阻尼参数通常存在内部峰值。两种情形分别优化常量阻尼系数，以及速度相关阻尼的比例系数与幂指数。

## 数据特征

附件 3 在 `ω=2.2143 s⁻¹` 处直接给出 `m_a=1165.992 kg`、`b_h=167.8395 N·s/m`、`F=4890 N`。附件 4 的质量、几何和弹簧参数与 Q1 相同。优化变量范围由题面明确给出，不需要从数据中估计。

## 题型分类

动力系统约束下的单目标连续参数优化：常量阻尼情形是一维有界优化，幂律阻尼情形是二维有界优化。

## 候选方法

1. **L1 频域解析模型。** 对常量阻尼建立复幅值响应，平均功率可直接写成阻尼系数的一元函数；适合作为基准和校验。
2. **L2 时域稳态平均模型。** 对两种阻尼规律统一求稳定响应并积分平均功率，是覆盖全题的主模型。
3. **L3 随机波谱优化。** 需要波谱和多频水动力数据，题面只指定单一圆频率，当前排除。

## 基准方法

常量阻尼情形优先保留复幅值公式。它不依赖时间离散，能给出平均功率的独立参考；时域模型应在稳定后与该结果一致。

## 方法对比

L1 对线性情形精确、透明，但无法直接处理幂律阻尼产生的谐波；L2 对两种情形统一，代价是需要明确稳态判据与平均窗口。主模型采用 L2，L1 作为常量阻尼的交叉验证。

## 失效模式

- 用全程平均代替稳态平均会把初始瞬态混入目标，导致最优参数依赖模拟时长。
- 把阻尼力幅值直接当成功率会漏乘相对速度。
- 幂律阻尼在 `v_r=0` 处需使用连续定义 `D(0)=0`，不能产生除零或符号跳变。
- 只报告搜索器返回值而不检查边界和局部邻域，不能支持“最大”结论。

## 建模思路

复用 Q1 的二自由度运动方程，将阻尼参数视为决策变量。瞬时 PTO 功率定义为阻尼力与相对速度的乘积；平均功率定义为瞬态衰减后的长期时间平均。常量阻尼情形同时建立复幅值模型，得到解析平均功率函数；幂律情形保留时域非线性模型。最终在题目给定的闭区间内最大化平均功率，并输出最优参数和相应最大功率。

## 模型假设

- `[AI-DRAFT][继承假设]` 继承 Q1 的线性水动力、纯垂荡、静平衡增量坐标和忽略未给定机械损耗等假设；违反时会改变动力学响应和功率。
- `[AI-DRAFT][必要假设]` PTO 输出功率等于阻尼器耗散的机械功率，能量转换链的其他损失不另计。若存在发电机效率，应在功率目标外乘效率函数，但题面未提供。
- `[AI-DRAFT][口径假设]` “平均输出功率”采用稳定周期响应的长期平均，不把起始瞬态计入目标。若改用有限时段平均，最优解会随初值和时长变化。
- `[AI-DRAFT][稳定性假设]` 可行域内被评价的参数必须产生有界稳定响应；不稳定或未进入稳定状态的参数不得作为有效最优解。

## 决策记录

### 候选建模方法与比较

当前数学源采用“L2 时域稳态功率优化 + L1 线性频域校验”。降级规则：若幂律模型的稳定周期无法可靠识别，则先完成常量阻尼的一维解析/数值优化，并将非线性情形标为 blocker，而不是用任意有限窗口替代。

### AI建议

1. 建议把稳态定义为相邻若干周期的状态差与平均功率差同时低于阈值。依据是平均功率可能先稳定而状态相位仍漂移；风险是阈值过松会造成假稳态；下一检查在算法阶段设置至少两档阈值做收敛对比。
2. 建议对最优点做邻域剖面和边界比较。依据是有界优化可能在端点或平坦峰值处结束；风险是单个最优数字缺乏可信度；下一检查输出最优点附近功率曲线及二阶敏感性。

### 用户确认决策

待确认：是否采用“稳定后的长期平均功率”作为 Q2 的正式目标口径，并接受 Q1 继承假设。
