模型/Q2/v2/建模思路.md
# Q2 建模思路

owner_name: 罗懿
owner_code: L
owner_role: 建模手
version: v2
status: draft
based_on: 模型/Q2/v1/建模思路.md；模型/Q2/v1/数学模型.md；模型/Q1/v2/数学模型.md；题目信息/A题/附件3.xlsx/Sheet1!A3:H3

## 题目分析

问题二是在 Q1 垂荡动力学基础上的参数反演与连续优化。阻尼过小时相对速度大但单位阻尼耗能低，阻尼过大时浮子与振子趋于同步、相对速度下降，因此平均功率关于阻尼参数通常存在内部峰值。两种情形分别优化常量阻尼系数，以及速度相关阻尼的比例系数与幂指数。

## 数据特征

附件 3 在 `ω=2.2143 s⁻¹` 处直接给出 `m_a=1165.992 kg`、`b_h=167.8395 N·s/m`、`F=4890 N`。附件 4 的质量、几何和弹簧参数与 Q1 相同。优化变量范围由题面明确给出，不需要从数据中估计。

## 题型分类

动力系统约束下的单目标连续参数优化：常量阻尼情形是一维有界优化且线性系统结构使其可解析求解；幂律阻尼情形是二维有界优化，可用等效线性化构造解析代理。

## 候选方法

1. **L1 频域解析模型。** 对常量阻尼建立相对位移标量传递函数，平均功率化为阻尼系数的显式有理函数，驻点条件给出闭式最优阻尼与最大功率；本情形无需数值优化器。
2. **L2 时域稳态平均模型。** 对两种阻尼规律统一求稳定响应并积分平均功率，是覆盖全题的主模型，也是幂律情形的正式目标口径。
3. **L2+ 等效线性化代理（谐波平衡）。** 把幂律阻尼投影到一阶谐波，得到 `Λ(p)` 因子、等效阻尼 `c_eq` 与自洽振幅方程，把二维搜索降为解析代理映射；作为快速搜索与独立校验，不替代 L2 口径。
4. **L3 随机波谱优化。** 需要波谱和多频水动力数据，题面只指定单一圆频率，当前排除。

## 基准方法

常量阻尼情形以闭式解 `c*=|α|/(ω|β|)` 及对应功率闭式为基准；时域模型稳定后必须复现该值。幂律情形以等效线性化代理为基准参考，时域结果与代理的偏差应有界且可解释（奇次谐波截断误差）。

## 方法对比

L1 对线性情形精确、透明，并升级为闭式最优解，但无法直接处理幂律阻尼产生的谐波；L2 对两种情形统一，代价是需要明确稳态判据与平均窗口；L2+ 用一个 Γ 函数因子换取二维问题的解析结构，误差来源明确。主模型采用 L2，L1 提供情形一的解析解与校验，L2+ 提供情形二的代理与校验。

## 失效模式

- 用全程平均代替稳态平均会把初始瞬态混入目标，导致最优参数依赖模拟时长。
- 把阻尼力幅值直接当成功率会漏乘相对速度。
- 幂律阻尼在 `v_r=0` 处需使用连续定义 `D(0)=0`，不能产生除零或符号跳变。
- 只报告搜索器返回值而不检查边界和局部邻域，不能支持“最大”结论。
- 把等效线性化代理值当成正式功率会引入谐波截断误差；代理只用于搜索与校验。
- 闭式最优阻尼若落在决策区间外，必须取区间端点，不能直接报告无约束驻点。

## 建模思路

复用 Q1 的二自由度运动方程，将阻尼参数视为决策变量。瞬时 PTO 功率定义为阻尼力与相对速度的乘积；平均功率定义为瞬态衰减后的长期时间平均。常量阻尼情形把频域方程消元成相对位移标量传递函数 `ξ̂(c)=Fμ_o/(α+iωcβ)`，平均功率成为 `c` 的显式有理函数，驻点条件给出闭式最优阻尼与最大功率。幂律情形保留时域非线性模型为正式口径，同时用一阶谐波投影得到等效阻尼与自洽振幅方程作为解析代理。最终在题目给定的闭区间内最大化平均功率，并输出最优参数和相应最大功率。

## 模型假设

- `[AI-DRAFT][继承假设]` 继承 Q1 的线性水动力、纯垂荡、静平衡增量坐标和忽略未给定机械损耗等假设；违反时会改变动力学响应和功率。
- `[AI-DRAFT][必要假设]` PTO 输出功率等于阻尼器耗散的机械功率，能量转换链的其他损失不另计。若存在发电机效率，应在功率目标外乘效率函数，但题面未提供。
- `[AI-DRAFT][口径假设]` “平均输出功率”采用稳定周期响应的长期平均，不把起始瞬态计入目标。若改用有限时段平均，最优解会随初值和时长变化。
- `[AI-DRAFT][稳定性假设]` 可行域内被评价的参数必须产生有界稳定响应；不稳定或未进入稳定状态的参数不得作为有效最优解。
- `[AI-DRAFT][近似假设]` 等效线性化代理假设稳态相对速度以基频分量为主；幂律阻尼激发的高次谐波作为截断误差处理，代理结论必须经时域口径复核。

## 决策记录

### 候选建模方法与比较

当前数学源采用“L2 时域稳态功率优化 + L1 闭式解析解（情形一）+ L2+ 等效线性化代理（情形二）”。降级规则：若幂律模型的稳定周期无法可靠识别，则先交付常量阻尼的闭式最优解，并将非线性情形标为 blocker，而不是用任意有限窗口替代；若等效线性化代理与时域结果偏差超出 `结果需求.md` 阈值，则代理只降级为搜索初值来源。

### v1 审查与 v2 改动依据（v2 触发事件）

对 `模型/Q2/v1/数学模型.md` 逐式审查：动力学（Q2-1）、功率定义（Q2-2）、平均功率口径（Q2-3）、复幅值（Q2-4）与闭式平均功率（Q2-5）均无错误，附件 3 参数行核对一致。v2 改动：

1. 把矩阵求逆形式的复幅值消元为标量传递函数 `ξ̂(c)=Fμ_o/(α+iωcβ)`，使 `P̄_lin(c)` 成为显式有理函数。
2. 由驻点条件得到情形一闭式最优解 `c*=min{|α|/(ω|β|),c_max}` 与最大功率闭式；情形一从“数值扫描”升级为“解析解 + 数值一致性核对”。
3. 新增幂律情形的等效线性化代理：`Λ(p)=Γ((p+3)/2)/(√π Γ((p+4)/2))`、`P̄_HB=c_0Λ(p)V^{p+2}`、`c_eq=2c_0Λ(p)V^p` 与自洽方程 `V=ω|ξ̂(c_eq(V))|`，并写明其一阶谐波近似性质与等功率岭结构。
4. 决策上界命名为 `c_max`，公式与题面数值分离。

推导自检（草稿核验，非正式运行）：用附件 3/4 参数比较闭式与 10⁶ 点扫描，`c*` 与 `P̄*` 一致（约 3.72×10⁴ N·s/m、229.3 W 量级）；`Λ(p)` 闭式与数值积分在 `p∈{0,0.5,1}` 一致。正式数值以 `code-execution` 阶段运行为准。

### AI建议

1. 建议把稳态定义为相邻若干周期的状态差与平均功率差同时低于阈值。依据是平均功率可能先稳定而状态相位仍漂移；风险是阈值过松会造成假稳态；下一检查在算法阶段设置至少两档阈值做收敛对比。
2. 建议对最优点做邻域剖面和边界比较。依据是有界优化可能在端点或平坦峰值处结束；风险是单个最优数字缺乏可信度；下一检查输出最优点附近功率曲线及二阶敏感性。
3. 建议情形二的搜索以等效线性化代理的等功率岭为初值区域，并沿 `c_0=c_max` 边界做一维加密。依据是 `c_eq≈c*` 的岭结构使最优点可能落在 `c_0` 边界；风险是代理偏差误导初值；下一检查用时域口径复核代理给出的候选点。

### 用户确认决策

- 待确认：是否采用“稳定后的长期平均功率”作为 Q2 的正式目标口径，并接受 Q1 继承假设。
- 待确认：是否接受情形一闭式最优解作为正式解法（数值优化降为一致性核对）。
- 待确认：是否接受等效线性化代理作为情形二的搜索/校验手段及其近似假设。
